--- a/content/post/2018-02-19-climate-of-theodore-roosevelt-national-park.Rmd
+++ b/content/post/2018-02-19-climate-of-theodore-roosevelt-national-park.Rmd
@@ -30,4 +30,4 @@ data <- read_csv("medora-historical-weather.csv", col_names = TRUE) %>%
   diagwl(est="Medora, ND",alt=691,per="1948-2018",mlab="en")
 ```
   
-As you can see from teh graph above, the growing season is about 7 months long, but below freezing temperatues can occur in June and August.  The average temperature is 6.9 ^o^C, which slightly warmer than a household refrigerator.  The average high temperature of the year is 30 ^o^C, and the average low temperature of the year is -16 ^o^C.  However, it can get as cold as -45 ^o^C.  The red line shows the monthly average temperature.    The blue line indicates the average monthly precipitation and shows that the precipitation increases in the spring and then decreases as the year progresses. In August, dry conditions can limit plant growth.  Consequently, plants that live in park need to have strategies to avoid or resist cold and dry conditions.  
+As you can see from the graph above, the growing season is about 7 months long, but below freezing temperatures can occur in June and August.  The average temperature is 6.9 ^o^C, which slightly warmer than a household refrigerator.  The average high temperature of the year is 30 ^o^C, and the average low temperature of the year is -16 ^o^C.  However, it can get as cold as -45 ^o^C.  The red line shows the monthly average temperature.    The blue line indicates the average monthly precipitation and shows that the precipitation increases in the spring and then decreases as the year progresses. In August, dry conditions can limit plant growth.  Consequently, plants that live in park need to have strategies to avoid or resist cold and dry conditions.  
